[package]
name = "term_hashmap"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]

[dependencies]
byteorder = "1.2.3"
crunchy = "0.2.1"
fnv = "1.0.6"
log = "0.4.1"
measure_time = "0.5.0"
cpuprofiler = "0.0.3"

[lib]
name = "term_hashmap"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "bin/bench.rs"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "unwind"

